--- a/src/app/Admin/Formation/demande-formations/demande-formations.component.css
+++ b/src/app/Admin/Formation/demande-formations/demande-formations.component.css
@@ -1,19 +1,65 @@
 .custom-list {
-    list-style-type: none; /* Supprime les puces de la liste */
-    padding-left: 0; /* Supprime l'espacement à gauche de la liste */
-    margin-bottom: 0; /* Supprime l'espacement en bas de la liste */
+  list-style-type: none; /* Supprime les puces de la liste */
+  padding-left: 0; /* Supprime l'espacement à gauche de la liste */
+  margin-bottom: 0; /* Supprime l'espacement en bas de la liste */
 }
+.card {
+    margin-bottom: 20px; /* Ajoute un espace en bas de chaque carte */
+    margin-right: 15px; /* Ajoute un espace à droite de chaque carte */
 
+   }
+ 
+   
+   
 .custom-list li {
-    margin-bottom: 10px; /* Espacement entre les éléments de la liste */
-    padding: 10px 0; /* Espacement vertical autour de chaque élément de la liste */
-    border-bottom: 1px solid #ddd; /* Ajoute une bordure en bas de chaque élément de la liste */
+  margin-bottom: 10px; /* Espacement entre les éléments de la liste */
+  padding: 10px 0; /* Espacement vertical autour de chaque élément de la liste */
+  border-bottom: 1px solid #ddd; /* Ajoute une bordure en bas de chaque élément de la liste */
 }
 
 .custom-list li:last-child {
-    border-bottom: none; /* Supprime la bordure du dernier élément de la liste */
+  border-bottom: none; /* Supprime la bordure du dernier élément de la liste */
 }
 .info {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
+
+  .avatar-stack {
+    position: relative;
+    display: inline-block;
+   }
+   
+   .avatar-stack .badge {
+    position: absolute;
+    top: -10px; /* Ajustez cette valeur pour positionner le badge au-dessus des avatars */
+    right: -10px; /* Ajustez cette valeur pour positionner le badge à droite des avatars */
+    border-radius: 50%;
+    padding: 5px 10px;
+    background-color: red; /* Utilisez la couleur de votre choix */
+    color: white; /* Utilisez la couleur de votre choix */
+   }
+   
+   
+   .avatar-stack img {
+    position: absolute;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+   }
+   
+   .avatar-stack img:nth-child(1) {
+    z-index: 3;
+   }
+   
+   .avatar-stack img:nth-child(2) {
+    left: 20px;
+    z-index: 2;
+   }
+   
+   .avatar-stack img:nth-child(3) {
+    left: 40px;
+    z-index: 1;
+   }
+   
