--- a/src/app/Admin/Formation/demande-formations/demande-formations.component.html
+++ b/src/app/Admin/Formation/demande-formations/demande-formations.component.html
@@ -49,7 +49,7 @@
               role="tab"
               aria-controls="purchases"
               aria-selected="false"
-              >Demandes des Manager Service
+              >Groupes
             </a>
           </li>
         </ul>
@@ -217,8 +217,10 @@
                               <li class="dropdown-header text-start"></li>
 
                               <li>
-                                <button class="dropdown-item mb-2"
-                                (click)="openModael(groupe.groupe.id)">
+                                <button
+                                  class="dropdown-item mb-2"
+                                  (click)="openModael(groupe.groupe.id)"
+                                >
                                   <span><i class="mdi mdi-eye"></i> </span>
                                   Insight
                                 </button>
@@ -257,6 +259,27 @@
                         <span class="badge bg-danger">{{
                           groupe.nombreMembres
                         }}</span>
+                      </div>
+                      <div class="mb-3 align-items-center d-flex">
+                        <span class="fw-bold">Etat: &nbsp; &nbsp; &nbsp; </span>
+                        <span
+                          class="badge"
+                          [class.bg-danger]="
+                            groupe.groupe.etat === 'En_Attente'
+                          "
+                          [class.bg-warning]="groupe.groupe.etat === 'Termine'"
+                          [class.bg-success]="groupe.groupe.etat === 'Certifie'"
+
+                          [style.color]="'white'"
+                        >
+                        {{
+                          groupe.groupe.etat === 'En_Attente'
+                            ? 'En Attente'
+                            : groupe.groupe.etat === 'Termine'
+                              ? 'Session Crée'
+                              : groupe.groupe.etat
+                        }}
+                        </span>
                       </div>
                       <div
                         class="trainer-profile d-flex align-items-center mb-3"
